// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginButton /> renders a loading indicator when loading is passed in as true 1`] = `
<Button
  disabled={true}
  onClick={[MockFunction]}
  stretch={true}
  type="button"
>
  <LoadingIcon />
  <span>
    Sign In
  </span>
</Button>
`;

exports[`<LoginButton /> renders as expected 1`] = `
<Button
  disabled={false}
  onClick={[MockFunction]}
  stretch={true}
  type="button"
>
  <span>
    Sign In
  </span>
</Button>
`;
